Fix uneven block heights

--- a/theme/moove/scss/moove/_frontpage.scss
+++ b/theme/moove/scss/moove/_frontpage.scss
@@ -402,7 +402,7 @@
     .frontpage-contact {
         margin: -4rem 0 0 0;
         padding: 2rem 0;
-        height: 22rem;
+        height: 25rem;
 
         h4 {
             color: #0f3247!important;
